changed base name and name back to 'modern-landing-page'

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "modern-landing-page-01",
+  "name": "modern-landing-page",
   "version": "0.0.0",
   "description": "",
   "scripts": {
